adds login handler
